--- a/embed/scss/_dialog.scss
+++ b/embed/scss/_dialog.scss
@@ -54,6 +54,7 @@
 
     .comentario-dialog-body {
         padding: 16px;
+        overflow: hidden;
     }
 
     .comentario-dialog-centered {
